--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 	margin: 0;
 	background: #ec6337;
 	font-family: "Changa One";
-	font-weight: 600;
+	font-weight: 400;
   overflow-y: scroll;
 }
 
@@ -40,7 +40,7 @@ body {
 .team_profile{
   margin: 20px;
   display:flex; 
-  flex-direction: row; 
+  flex-direction: column; 
   justify-content: center; 
 }
 
@@ -51,12 +51,18 @@ body {
   height: 50vh;
 }
 
-.team_profile p{
-  padding-left: 5%;
-  padding-right: 5%;
-  color:#530101;
-  font-size: 3vh;
-  text-align: left;
+.text{
+  display:flex; 
+  flex-direction: row; 
+  margin: auto;
+  width: 65%;
+  justify-content: center; 
+  max-height:fit-content; 
+  max-width: fit-content;
+} 
+
+.text div {
+  padding: 5%;
 }
 
 .newsic{
@@ -95,6 +101,7 @@ body {
     margin: 2%;
     color: #ec6337;
     font-size: 5vh;
+    font-weight: 400;
 }
 
 .text_red{
@@ -128,10 +135,10 @@ ul{
 }
 
 .logo{
-    margin: 1%;
+    margin-top: 1%;
     float: center;
-    height: 10%;
-    width: 10%;
+    height: 47px; 
+    width: 62px;
 }
 
 .container {
@@ -171,7 +178,7 @@ nav a {
   color: #ec6337ba;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 100%;
+  font-size: 3.5vh;
 }
 
 nav a:hover{
