--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,8 @@ body {
 .team_profile img{
   padding-left: 5%;
   padding-right: 5%;
-  width: 40vh;
-  height: 50vh;
+  width: 160px;
+  height: 200px;
 }
 
 .text{
@@ -60,6 +60,7 @@ body {
   max-height:fit-content; 
   max-width: fit-content;
 } 
+
 
 .text div {
   padding: 5%;
@@ -169,8 +170,8 @@ nav ul {
 
 nav li {
   display: inline-block;
-  margin-left: 10px;
-  padding-top: 7%;
+  margin: 5px;
+  padding-top: 5%;
   position: relative;
 }
 
