--- a/styles.css
+++ b/styles.css
@@ -179,7 +179,7 @@ nav a {
   color: #ec6337ba;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 3.5vh;
+  font-size: 40px;
 }
 
 nav a:hover{
